push after collab setting

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
         <p>Hello, world.</p>
         
-        
+
         <p>Hello classmates - H</p>
+        <p>test after being added as collaborator</p>
 
     </body>
 </html>
