--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
 
         <p>Hello classmates - H</p>
-        <p>test after being added as collaborator</p>
+        <p>test after being added as ____collaborator</p>
 
     </body>
 </html>
